# Terminal-Library

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  format.yml
docs/: api_reference.md  examples.md  getting_started.md  index.md  objects.md  points.md  utils.md
docs/api_docs/: app.md  objects.md  text.md
docs/dev/: file_relation.md
include/terminal/: base.hpp  color.hpp  feature.hpp  obj.hpp
src/: base.cpp  obj.cpp  terminal.h  terminal.hpp
src/app/: app.cc  app.h
src/base/: base.hpp
src/color/: color.hpp
src/core/: drawObj.cc  drawObj.h  render.cc  render.h  screen.cc  screen.h
src/feat/: feature.cc  feature.h  feature.hpp
src/feature/: feature.hpp
src/field/: field.cc  field.cpp  field.h  field.hpp
src/input/: cursor.cc  cursor.h  keyboard.cc  keyboard.h
src/layout/: border.h  rect.h
src/style/: color.cc  color.h
src/terminal/: Terminal.cc  Terminal.h
src/utils/: base.cc  base.cpp  base.h  base.hpp  color.cc  color.cpp  color.h  color.hpp  internal.cc  internal.h
